--- a/apple-clone/package.json
+++ b/apple-clone/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^17.0.2",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
