--- a/apple-clone/package.json
+++ b/apple-clone/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.24.0",
     "firebase": "^7.19.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
